--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -25,6 +25,11 @@
         android:entries="@array/lockscreen_background_entries"
         android:entryValues="@array/lockscreen_background_values"/>
 
+    <CheckBoxPreference
+        android:key="lockscreen_vibrate"
+        android:title="@string/lockscreen_vibrate_enabled_title"	       
+        android:summary="@string/lockscreen_vibrate_enabled_head"/>
+
      <ListPreference
         android:key="lockscreen_battery_status"
         android:persistent="false"
