--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -25,11 +25,6 @@
         android:entries="@array/lockscreen_background_entries"
         android:entryValues="@array/lockscreen_background_values"/>
 
-    <CheckBoxPreference
-        android:key="lockscreen_vibrate"
-        android:title="@string/lockscreen_vibrate_enabled_title"	       
-        android:summary="@string/lockscreen_vibrate_enabled_head"/>
-
      <ListPreference
         android:key="lockscreen_battery_status"
         android:persistent="false"
@@ -61,5 +56,15 @@
         android:key="lockscreen_targets"
         android:summary="@string/lockscreen_target_summary"
         android:title="@string/lockscreen_target_title" />
+
+    <CheckBoxPreference
+        android:key="lockscreen_vibrate"
+        android:title="@string/lockscreen_vibrate_enabled_title"	       
+        android:summary="@string/lockscreen_vibrate_enabled_head"/>
+    
+    <CheckBoxPreference
+        android:key="lockscreen_user_timeout_override"
+        android:title="@string/title_lockscreen_user_timeout_override"
+        android:summary="@string/summary_lockscreen_user_timeout_override" />
 
 </PreferenceScreen>
