add 38dp for elisha -_-
Change-Id: I29ff7a7d89d120071f57c19e840cdf2b881269a3

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1794,6 +1794,7 @@
         <item>48 dp (default)</item>
         <item>44 dp</item>
         <item>40 dp</item>
+        <item>38 dp</item>
         <item>36 dp</item>
         <item>30 dp</item>
         <item>24 dp</item>
@@ -1803,6 +1804,7 @@
         <item>48</item>
         <item>44</item>
         <item>40</item>
+        <item>38</item>
         <item>36</item>
         <item>30</item>
         <item>24</item>
