--- a/res/xml/display_rotation.xml
+++ b/res/xml/display_rotation.xml
@@ -44,5 +44,10 @@
         android:title="@string/display_rotation_270_title"
         android:layout="?android:attr/preferenceLayoutChild"
         android:dependency="accelerometer" />
+    <CheckBoxPreference
+        android:key="lockscreen_rotation"
+        android:title="@string/display_lockscreen_rotation_title"
+        android:layout="?android:attr/preferenceLayoutChild"
+        android:dependency="accelerometer" />
 
 </PreferenceScreen>
