--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1759,6 +1759,7 @@
 		<item>Toggle Widgets</item>
 		<item>Kill app</item>
 		<item>Power</item>
+        <item>Notifications</item>
 		<item>Custom app</item>
 		<item>Blank</item>
 	</string-array>
@@ -1772,6 +1773,7 @@
 		<item>**widgets**</item>
 		<item>**kill**</item>
 		<item>**power**</item>
+        <item>**notifications**</item>
 		<item>**app**</item>
 		<item>**null**</item>
 	</string-array>
