fix up category in development preferences
Change-Id: Ibb08beeabb7a3ae0dd297ea8b4b0623ffe19b6bd

--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -95,8 +95,8 @@
         
     </PreferenceCategory>
 
-    <PreferenceCategory android:key="debug_debugging_category"
-            android:title="@string/debug_debugging_category">
+    <PreferenceCategory android:key="debug_misc_category"
+            android:title="@string/debug_misc_category">
 
         <PreferenceScreen
                 android:key="local_backup_password"
