--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -20,6 +20,11 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <PreferenceScreen
+        android:key="general_ui_settings"
+        android:fragment="com.android.settings.cnd.UserInterface"
+        android:title="@string/title_ui" />
+
+    <PreferenceScreen
         android:key="power_menu_settings"
         android:fragment="com.android.settings.cnd.PowerMenuSettings"
         android:title="@string/power_menu_settings_title" />
