--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1854,6 +1854,16 @@
         <item>5</item>
     </string-array>
 
+    <string-array name="lockscreen_widgets_values">  
+        <item>0</item>  
+        <item>1</item>
+    </string-array>
+    
+    <string-array name="lockscreen_widgets_entries">
+        <item>Stock</item>
+        <item>Centered</item>
+    </string-array>
+
     <!-- **** EXTRA EDITS END **** -->
 
 </resources>
