added rom about (syaoran12)
Change-Id: I9c3beeafe79fde8600e8e3e2dae0c81905853b55

--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -248,6 +248,13 @@
         android:icon="@drawable/ic_settings_development"
         android:title="@string/development_settings_title" />
 
+    <!-- About Rom -->
+    <header
+        android:id="@+id/about_rom"
+        android:fragment="com.android.settings.cnd.About"
+        android:icon="@drawable/ic_settings_about"
+        android:title="@string/title_about" />
+
     <!-- About Device -->
     <header
         android:id="@+id/about_settings"
