Custom Navbar Ring Targets (from eos, modified for cna)
Use nicer images for the actions
Give haptic feedback when a target is selected
Make kill app action smarter

--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -50,6 +50,11 @@
         android:title="@string/nav_bar" />
 
     <PreferenceScreen
+        android:key="navring_settings"
+        android:fragment="com.android.settings.eos.NavRingActions"
+        android:title="@string/interface_navring_settings" />
+
+    <PreferenceScreen
         android:key="hardware_keys"
         android:fragment="com.android.settings.cnd.HardwareKeys"
         android:title="@string/hardware_keys_title" />
