--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1887,6 +1887,24 @@
         <item>Six-Eight Centered</item>
     </string-array>
 
+    <string-array name="navring_dialog_entries">
+        <item>None</item>
+        <item>Take Screenshot</item>
+        <item>Kill App</item>
+        <item>Screen Off</item>
+        <item>Google Now</item>
+        <item>Select Application</item>
+    </string-array>
+    
+    <string-array name="navring_dialog_values">
+        <item>none</item>
+        <item>screenshot</item>
+        <item>killcurrent</item>
+        <item>screenoff</item>
+        <item>assist</item>
+        <item>app</item>
+    </string-array>
+
     <!-- **** EXTRA EDITS END **** -->
 
 </resources>
