--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1857,11 +1857,15 @@
     <string-array name="lockscreen_widgets_values">  
         <item>0</item>  
         <item>1</item>
+        <item>2</item>  
+        <item>3</item>
     </string-array>
     
     <string-array name="lockscreen_widgets_entries">
-        <item>Stock</item>
-        <item>Centered</item>
+        <item>One-Five</item>
+        <item>One-Five Centered</item>
+        <item>Six-Eight</item>  
+        <item>Six-Eight Centered</item>
     </string-array>
 
     <!-- **** EXTRA EDITS END **** -->
