--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1793,6 +1793,7 @@
     
     <string-array name="navigation_bar_width_entries">
         <item>42 dp (default)</item>
+        <item>38 dp</item>
         <item>36 dp</item>
         <item>30 dp</item>
         <item>24 dp</item>
@@ -1800,6 +1801,7 @@
     
     <string-array name="navigation_bar_width" translatable="false">
         <item>42</item>
+        <item>38</item>
         <item>36</item>
         <item>30</item>
         <item>24</item>
@@ -1809,6 +1811,7 @@
         <item>48 dp (default)</item>
         <item>44 dp</item>
         <item>40 dp</item>
+        <item>38 dp</item>
         <item>36 dp</item>
         <item>30 dp</item>
         <item>24 dp</item>
@@ -1818,6 +1821,7 @@
         <item>48</item>
         <item>44</item>
         <item>40</item>
+        <item>38</item>
         <item>36</item>
         <item>30</item>
         <item>24</item>
@@ -1826,6 +1830,7 @@
     <string-array name="navigation_bar_height_landscape_entries">
         <item>48 dp (default)</item>
         <item>42 dp</item>
+        <item>38 dp</item>
         <item>36 dp</item>
         <item>30 dp</item>
         <item>24 dp</item>
@@ -1834,6 +1839,7 @@
     <string-array name="navigation_bar_height_landscape" translatable="false">
         <item>48</item>
         <item>42</item>
+        <item>38</item>
         <item>36</item>
         <item>30</item>
         <item>24</item>
