--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -64,6 +64,7 @@
     <dimen name="navigation_bar_44">44.0dip</dimen>
     <dimen name="navigation_bar_42">42.0dip</dimen>
     <dimen name="navigation_bar_40">40.0dip</dimen>
+    <dimen name="navigation_bar_38">38.0dip</dimen>
     <dimen name="navigation_bar_36">36.0dip</dimen>
     <dimen name="navigation_bar_30">30.0dip</dimen>
     <dimen name="navigation_bar_24">24.0dip</dimen>
