--- a/res/xml/about_rom.xml
+++ b/res/xml/about_rom.xml
@@ -3,29 +3,65 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:cna="http://schemas.android.com/apk/res/com.android.settings">
 
-    <Preference
-        android:key="cna_website"
-        android:title="@string/cna_website_title"
-        android:summary="@string/cna_website_summary" />
-
-    <Preference
-        android:key="cna_forum"
-        android:title="@string/cna_review_title"
-        android:summary="@string/cna_review_summary" />
-
-    <Preference
-        android:key="cna_source"
-        android:title="@string/cna_source_title"
-        android:summary="@string/cna_source_summary" />
-
 	<PreferenceCategory
 		android:key="devs"
 		android:title="@string/devs">
+
 		<com.android.settings.widgets.DeveloperPreference
-			android:title="Codenamedroid"
-			cna:nameDev="codenamedroid"
-			cna:twitterHandle="codenameandroid"
-			cna:donateLink="@string/donate_cna" />
+            android:title="Codenamedroid"
+            cna:nameDev="codenamedroid"
+            cna:twitterHandle="codenameandroid"
+            cna:donateLink="@string/donate_cna" />
+
+	</PreferenceCategory>    
+
+	<PreferenceCategory
+		android:key="links"
+		android:title="@string/links">
+
+        <Preference
+            android:key="cna_website"
+            android:title="@string/cna_website_title"
+            android:summary="@string/cna_website_summary" />
+
+        <Preference
+            android:key="cna_forum"
+            android:title="@string/cna_review_title"
+            android:summary="@string/cna_review_summary" />
+
+        <Preference
+            android:key="cna_source"
+            android:title="@string/cna_source_title"
+            android:summary="@string/cna_source_summary" />
+
+        <Preference
+            android:key="cna_youtube"
+            android:title="@string/cna_youtube_title"
+            android:summary="@string/cna_youtube_summary" />
+
+	</PreferenceCategory>
+
+	<PreferenceCategory
+		android:key="contributors"
+		android:title="@string/contributors">
+
+		<com.android.settings.widgets.DeveloperPreference
+            android:title="CyanogenMod"
+            cna:nameDev="cyanogenmod"
+            cna:twitterHandle="cyanogenmod"
+            cna:donateLink="@string/donate_cyanogenmod" />
+
+		<com.android.settings.widgets.DeveloperPreference
+            android:title="AOKP"
+            cna:nameDev="aokp"
+            cna:twitterHandle="aokp_rom"
+            cna:donateLink="@string/donate_aokp" />
+
+		<com.android.settings.widgets.DeveloperPreference
+            android:title="Team EOS"
+            cna:nameDev="teameos"
+            cna:twitterHandle="teameos" />
+
 	</PreferenceCategory>
 
 </PreferenceScreen>
