reorganize the navigation bar menu

--- a/res/xml/navbar_settings.xml
+++ b/res/xml/navbar_settings.xml
@@ -1,96 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <CheckBoxPreference
+        android:key="enable_nav_bar"
+        android:title="@string/navbar_enable_bar" />
+
+    <ListPreference
+        android:entries="@array/pref_navigation_menu_entries"
+        android:entryValues="@array/pref_navigation_menu_values"
+        android:key="pref_menu_display"
+        android:title="@string/title_pref_menu_display"
+        android:summary="@string/summary_pref_menu_display" />
+
+    <ListPreference
+        android:entries="@array/pref_navigation_menu_display_entries"
+        android:entryValues="@array/pref_navigation_menu_display_values"
+        android:key="navbar_menu_display"
+        android:title="@string/title_pref_navigation_menu_display"
+        android:summary="@string/summary_pref_navigation_menu_display" />
+
+    <ListPreference
+        android:entries="@array/navigation_bar_qty_entries"
+        android:entryValues="@array/navigation_bar_qty_values"
+        android:key="navbar_qty"
+        android:title="@string/navbar_qty_title"
+        android:summary="@string/navbar_qty_summary" />
 
     <PreferenceCategory
-            android:key="navbar_appearance"
-            android:title="@string/interface_navbar_appearance" >
+        android:key="navbar_buttons"
+        android:title="@string/navbar_button_cat">
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="advanced_cat"
+        android:title="@string/advanced_settings">
+
+        <ListPreference
+            android:entries="@array/glow_times_entries"
+            android:entryValues="@array/glow_times_values"
+            android:key="glow_times"
+            android:title="@string/glow_times_title"
+            android:defaultValue="100|10"
+            android:persistent="false" />
+
+        <ListPreference
+            android:entries="@array/navigation_bar_height_entries"
+            android:entryValues="@array/navigation_bar_height"
+            android:key="navigation_bar_height"
+            android:title="@string/navigation_bar_height_title"
+            android:summary="@string/navigation_bar_height_summary" />
+
+        <ListPreference
+            android:entries="@array/navigation_bar_height_landscape_entries"
+            android:entryValues="@array/navigation_bar_height_landscape"
+            android:key="navigation_bar_height_landscape"
+            android:title="@string/navigation_bar_height_landscape_title"
+            android:summary="@string/navigation_bar_height_landscape_summary" />
+
+        <ListPreference
+            android:entries="@array/navigation_bar_width_entries"
+            android:entryValues="@array/navigation_bar_width"
+            android:key="navigation_bar_width"
+            android:title="@string/navigation_bar_width_title"
+            android:summary="@string/navigation_bar_width_summary" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="navigation_bar_style"
+        android:title="@string/navigation_bar_style">
+
         <com.android.settings.cnd.ColorPreference
             android:key="interface_navbar_color"
-            android:title="@string/interface_navbar_color_title" />
-        
+            android:title="@string/interface_navbar_color_title"
+            android:summary="@string/interface_navbar_color_summary" />
+    
         <Preference
             android:key="interface_navbar_color_default"
-            android:title="@string/interface_navbar_restore_stock_color" />
-    </PreferenceCategory>
+            android:title="@string/interface_navbar_restore_stock_color"
+            android:summary="@string/interface_navbar_restore_stock_color_summary" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="nav_button_color"
+            android:title="@string/navigation_bar_tint_title"
+            android:summary="@string/navigation_bar_tint_summary"
+            android:defaultValue="#FFFFFF" />
     
-        <CheckBoxPreference
-                android:key="enable_nav_bar"
-                android:title="@string/navbar_enable_bar" />
-
-        <ListPreference
-                android:entries="@array/pref_navigation_menu_entries"
-                android:entryValues="@array/pref_navigation_menu_values"
-                android:key="pref_menu_display"
-                android:title="@string/title_pref_menu_display"
-                android:summary="@string/summary_pref_menu_display" />
-
-        <ListPreference
-                android:entries="@array/pref_navigation_menu_display_entries"
-                android:entryValues="@array/pref_navigation_menu_display_values"
-                android:key="navbar_menu_display"
-                android:title="@string/title_pref_navigation_menu_display"
-                android:summary="@string/summary_pref_navigation_menu_display" />
-        <ListPreference
-                android:entries="@array/navigation_bar_qty_entries"
-                android:entryValues="@array/navigation_bar_qty_values"
-                android:key="navbar_qty"
-                android:title="@string/navbar_qty_title"
-                android:summary="@string/navbar_qty_summary" />
-
         <net.margaritov.preference.colorpicker.ColorPickerPreference
-                android:key="nav_button_color"
-                android:title="@string/navigation_bar_tint_title"
-                android:defaultValue="#FFFFFF" />
+            android:key="nav_button_glow_color"
+            android:title="@string/navigation_bar_glow_tint_title"
+            android:summary="@string/navigation_bar_glow_tint_summary"
+            android:defaultValue="#FFFFFF" />
 
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
-                android:key="nav_button_glow_color"
-                android:title="@string/navigation_bar_glow_tint_title"
-                android:summary="@string/navigation_bar_glow_tint_summary"
-                android:defaultValue="#FFFFFF" />
+        <com.android.settings.widgets.SeekBarPreference
+            android:key="button_transparency"
+            android:title="@string/button_transparency_title" />
 
-        <PreferenceCategory
-                android:key="navbar_buttons"
-                android:title="@string/navbar_button_cat">
-
-        </PreferenceCategory>
-
-        <PreferenceCategory
-            android:key="advanced_cat"
-            android:title="@string/advanced_settings">
-
-            <ListPreference
-                android:entries="@array/glow_times_entries"
-                android:entryValues="@array/glow_times_values"
-                android:key="glow_times"
-                android:title="@string/glow_times_title"
-                android:defaultValue="100|10"
-                android:persistent="false" />
-
-            <ListPreference
-                android:entries="@array/navigation_bar_height_entries"
-                android:entryValues="@array/navigation_bar_height"
-                android:key="navigation_bar_height"
-                android:title="@string/navigation_bar_height_title"
-                android:summary="@string/navigation_bar_height_summary" />
-
-            <ListPreference
-                android:entries="@array/navigation_bar_height_landscape_entries"
-                android:entryValues="@array/navigation_bar_height_landscape"
-                android:key="navigation_bar_height_landscape"
-                android:title="@string/navigation_bar_height_landscape_title"
-                android:summary="@string/navigation_bar_height_landscape_summary" />
-
-            <ListPreference
-                android:entries="@array/navigation_bar_width_entries"
-                android:entryValues="@array/navigation_bar_width"
-                android:key="navigation_bar_width"
-                android:title="@string/navigation_bar_width_title"
-                android:summary="@string/navigation_bar_width_summary" />
-
-            <com.android.settings.widgets.SeekBarPreference
-                android:key="button_transparency"
-                android:title="@string/button_transparency_title" />
-
-        </PreferenceCategory>
+    </PreferenceCategory>
 
 </PreferenceScreen>
