--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -26,6 +26,18 @@
             android:persistent="false"
             android:streamType="ring" />
 
+    <ListPreference
+            android:key="silent_mode"
+            android:title="@string/silent_mode_title"
+            android:entries="@array/silent_mode_entries"
+            android:entryValues="@array/silent_mode_values" />
+
+    <ListPreference
+            android:key="volume_overlay"
+            android:title="@string/volume_overlay_title"
+            android:entries="@array/volume_overlay_entries"
+            android:entryValues="@array/volume_overlay_values" />
+
     <Preference
             android:key="musicfx"
             android:title="@string/musicfx_title">
