--- a/res/values/bools.xml
+++ b/res/values/bools.xml
@@ -17,6 +17,8 @@
 <resources>
     <!-- Whether or not the dock settings are to be displayed for this device when docked -->
     <bool name="has_dock_settings">false</bool>
+    <!-- Whether or not device settings should be displayed or not for the device -->
+    <bool name="has_advanced_settings">false</bool>
     <!-- Whether there is a silent mode checkbox  -->
     <bool name="has_silent_mode">true</bool>
     <!-- Whether the power control widget is enabled for this device. Should be overridden for 
