root access and kill apps via settigns, developer options

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1194,6 +1194,21 @@
         <item>0</item>
     </string-array>
 
+    <!-- Arrays for root access capability -->
+    <string-array name="root_access_entries" translatable="false">
+        <item>@string/root_access_none</item>
+        <item>@string/root_access_apps</item>
+        <item>@string/root_access_adb</item>
+        <item>@string/root_access_all</item>
+    </string-array>
+
+    <string-array name="root_access_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
     <!-- Values for the notification light pulse spinners -->
     <string-array name="notification_pulse_length_entries">
         <item>@string/pulse_length_always_on</item>
