--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -126,6 +126,13 @@
             android:title="@string/enforce_read_external_title"
             android:summary="@string/enforce_read_external_summary" />
 
+		<ListPreference
+        android:key="root_access"
+        android:title="@string/root_access"
+        android:persistent="false"
+        android:entries="@array/root_access_entries"
+        android:entryValues="@array/root_access_values" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:key="debug_debugging_category"
