added 241 lcd density

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1443,6 +1443,7 @@
         <item>220</item>
         <item>230</item>
         <item>240</item>
+        <item>241</item>
         <item>245</item>
         <item>250</item>
         <item>260</item>
