--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -10,6 +10,11 @@
             android:key="custom_carrier_label"
             android:title="@string/custom_carrier_label_title" />
 
+        <CheckBoxPreference
+            android:key="recent_kill_all"
+            android:title="@string/recent_kill_all"
+            android:summary="@string/recent_kill_all_summary" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
